<resources>
    <!-- General strings -->
    <!-- Chat strings -->
    <string name="SEND">SEND</string>
    <string name="enter_message_hint">Enter message</string>
    <!-- Show book strings -->
    <string name="owners">Owners</string>
    <!-- Search book strings -->
    <string name="SearchByAll">All</string>
    <string name="SearchByTitle">Title</string>
    <string name="SearchByAuthor">Author</string>
    <string name="SearchByPublisher">Publisher</string>
    <string name="title_activity_search_books">SearchBooks</string>
    <!-- reviews strings -->
    <string name="pending">Pending</string>
    <string name="written">Written</string>
    <string name="received">Received</string>
    <!-- my book strings -->
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="edition_year">edition_year</string>
    <string name="publisher">Publisher</string>

    <!-- General strings -->

    <string name="app_name">BookShelf</string>
    <string name="nome_utente">Username</string>
    <string name="email">Email</string>
    <string name="biografia">Biography</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="user_profile_image">User profile image</string>
    <string name="contact_methods">Allow users to contact me on:</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="phone_call">Phone call</string>
    <string name="whatsapp">Whats App</string>
    <string name="lent_books">Lent</string>
    <string name="borrowed_books">Borrowed</string>
    <string name="credit_user">credit</string>
    <string name="title_activity_add_book">AddBook</string>
    <string name="book_title">Book title</string>
    <string name="myBooks">My books</string>
    <string name="book_author">Book author</string>
    <string name="author_unknown">Unknown author</string>
    <string name="title_unknown">Unknown Title</string>
    <string name="book_image_preview">book_image_preview</string>
    <string-array name="book_conditions">
        <item>Not set</item>
        <item>Like new</item>
        <item>Very good</item>
        <item>Good</item>
        <item>Acceptable</item>
    </string-array>
    <string name="add_book">Add Book</string>
    <string name="show_profile">Show profile</string>
    <string name="home">Home</string>
    <string name="my_books">My Books</string>
    <string name="unknown">Unknown</string>
    <string name="profile">Profile</string>
    <string name="Affirmative">Yes</string>
    <string name="Negative">No</string>
    <string name="Logout_permission">Are you sure you want to logout?</string>
    <string name="Delete_permission">Are you sure you want to delete it?</string>
    <string name="menu_search">Menu search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Title, Author, Publisher..</string>
    <string name="title_book_around_you">Books around me</string>


    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="isbn_number">ISBN number</string>
    <string name="scan">Scan</string>
    <string name="confirm">Confirm</string>
    <string name="book_condition_toast">Condition of the book is mandatory</string>
    <string name="scan_a_book_toast">Scan a book first!</string>
    <string name="no_valid_ISBN_toast">No valid ISBN found</string>
    <string name="ISBN_must_be_13_toast">ISBN must be 13 characters long</string>
    <string name="ISBN_not_found_toast">ISBN not found</string>
    <string name="Network_error">Network error</string>
    <string name="Geofire_error">There was an error saving the location to GeoFire: </string>
    <string name="Geofire_success">Location saved successfully!</string>
    <string name="new_message_notification">You have unread messages!</string>
    <string name="book_request_no_more_valid_toast">Book request is no more valid</string>
    <string name="book_request_accepted_alert">Book request accepted</string>
    <string name="book_request_declined_alert">Book request no more valid</string>
    <string name="book_request_accepted_message">Hi, I accepted your request!</string>
    <string name="book_request_declined_message">Hi, I\'m sorry but had to decline your book request</string>
    <string name="not_enough_credits">You don\'t have enough credits to request a book.&#xD;Add books to obtain credits.</string>
    <string name="book_request_question">Do you want to sent a request for this book?</string>

    <string name="chat">Chat</string>
    <string name="reviews">Reviews</string>
    <string name="logout">Logout</string>
    <string name="Logout_permission">Are you sure you want to logout?</string>


</resources>
