<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_profile"
        android:title="@string/show_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_profile"
        android:title="@string/edit_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_book"
        android:title="@string/add_book"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_books_list"
        android:title="@string/my_books"
        app:showAsAction="never" />


</menu>