<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_show_main_activity"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp" />

        <item
            android:id="@+id/action_show_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_account_circle_black_24dp" />

        <item
            android:id="@+id/action_my_books_list"
            android:title="@string/my_books"
            android:icon="@drawable/ic_collections_bookmark_black_24dp" />

        <item
            android:id="@+id/action_chat_list"
            android:title="Chat"
            android:icon="@drawable/ic_chat_black_24dp" />

        <item
            android:id="@+id/action_logout"
            android:title="Logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp" />


    </group>

</menu>