<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afec.bookshelf.SearchResult">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@android:color/black"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabSearchByAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SearchByAll" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabSearchByTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SearchByTitle" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabSearchByAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SearchByAuthor" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabSearchByPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SearchByPublisher" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/SearchViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>
