<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.afec.bookshelf.ReviewPage">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/rev_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@android:color/white">

            <android.support.design.widget.TabItem
                android:id="@+id/tabPending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabWritten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/written" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/rev_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
