<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.afec.bookshelf.EditUser">

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:innerRadius="0dp"
            android:shape="ring"
            app:cardCornerRadius="75dp">

            <ImageView
                android:id="@+id/editImmagineUtente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/user_profile_image"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/edit_profile_image_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/user_profile_image"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/nomeUtente2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_utente"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNomeUtente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nome_utente"
            android:inputType="textPersonName"
            android:maxLength="50" />

        <TextView
            android:id="@+id/bioUtente2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/biografia"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editBioUtente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/biografia"
            android:inputType="textMultiLine"
            android:maxLength="140" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_edit_confirm"
            android:text="@string/save"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>