<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="4dp"
        android:layout_gravity="center"
        tools:style="@style/CardView">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/book_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/book_image_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_image_preview"
                app:srcCompat="@drawable/book_image_placeholder"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/book_title_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:background="@color/colorPrimary"
                android:ellipsize="middle"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/title_unknown"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/book_autor_preview" />

            <TextView
                android:id="@+id/book_autor_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:background="@color/colorPrimary"
                android:ellipsize="end"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/author_unknown"
                android:textAlignment="center"
                android:textColor="#424242"
                app:layout_constraintBottom_toBottomOf="@+id/book_image_preview" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>